--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@faker-js/faker": "^8.4.1",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
+    "msw": "2.1",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.15",
     "react": "^18",
