--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@auth/core": "^0.28.0",
     "@faker-js/faker": "^8.4.1",
+    "@tanstack/react-query": "^5.25.0",
+    "@tanstack/react-query-devtools": "^5.25.0",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
     "msw": "2.1",
